test/compile-fail/resolution/type-existence/ambiguous-trait/expected.txt
error: the name `b` is defined multiple times
  ┌─ ./test/compile-fail/resolution/type-existence/ambiguous-trait/top.rhdl:2:7
  │
2 │ trait b {}
  │       - previous definition of the name `b` here
3 │ trait b {}
  │       ^ `b` redefined here

error: `b` is ambiguous (trait versus other traits found during resolution)
  ┌─ ./test/compile-fail/resolution/type-existence/ambiguous-trait/top.rhdl:1:13
  │
1 │ struct a<T: b> {}
  │             ^ ambiguous name
  │
  = rename other traits with the same name

